--- a/package.json
+++ b/package.json
@@ -10,16 +10,7 @@
     "test": "jest",
     "test:watch": "yarn test --watch"
   },
-  "husky":{
-    "hook":{
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "src/**/*": [
-      "yarn lint --fix", "yarn test --bail"
-    ]
-  },
+
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
@@ -28,15 +19,18 @@
     "global": "^4.4.0",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.9",
     "@babel/preset-typescript": "^7.13.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
