--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest",
     "test:watch": "yarn test --watch"
   },
-
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.23.0",
     "@typescript-eslint/parser": "^4.23.0",
@@ -23,19 +22,20 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.9",
     "@babel/preset-typescript": "^7.13.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
     "@types/react": "^17.0.5",
+    "@types/styled-components": "^5.1.9",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.4",
     "lint-staged": "^11.0.0",
     "prettier": "2.3.0",
     "typescript": "^4.2.4"
