--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "eslint-plugin-react": "^7.23.2",
     "global": "^4.4.0",
     "next": "10.2.0",
+    "next-pwa": "^5.2.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "webpack": "4"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
